src/examples/invalid/static/undeclared-function.ra
func main(): void {
  a = test();
}
